--- a/src/App.css
+++ b/src/App.css
@@ -47,17 +47,21 @@ main{
   color: #000;
 }
 .icon, .link_text{
-  font-size: 20px;
+  font-size: 14px;
 }
 
 .sidebar {
   margin: 0;
   padding: 0;
-  width: 200px;
+  width:200px;
   background-color: #f1f1f1;
   position: fixed;
-  height: 100%;
   overflow: auto;
+  /* main dash css */
+  background: #fff;
+  color: #000;
+  height: 100vh;
+  transition: all 0.5s;
 }
 
 .sidebar a {
@@ -68,8 +72,12 @@ main{
 }
  
 .sidebar a.active {
-  background-color: #04AA6D;
+  background-color: #BBE2FF;
   color: white;
+  border-radius: 2px;
+  border-style: box;
+
+  border: 2px solid #ccc;  
 }
 
 .sidebar a:hover:not(.active) {
@@ -82,6 +90,30 @@ div.content {
   padding: 1px 16px;
   height: 1000px;
 }
+
+.cardview-container{
+  margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+  }
+
+  .cardview-list{
+    width: 18%;
+    display: flex;
+    flex-wrap: wrap; 
+     justify-content: space-evenly;
+
+    min-height: 15vh;
+  }
+
+  .chart{
+    size: 12%
+  }
+
+
 
 @media screen and (max-width: 700px) {
   .sidebar {
@@ -100,12 +132,94 @@ div.content {
   }
 }
 
-.chart-container {
+
+
+$color-purple: #8B5CF6;
+$color-pink: #EC4899;
+$color-gray: #9CA3AF;
+$color-black: #1F2937;
+$card-size: 23rem;
+
+body {
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-image: linear-gradient(45deg, $color-purple, $color-pink);
+  font-family: 'Montserrat', sans-serif;
 }
 
-.chart-wrapper {
-  /* Add any additional styles for the chart wrapper */
+* {
+  box-sizing: border-box;
+}
+
+.carousel {
+  position: relative;
+  width: $card-size;
+  height: $card-size;
+  perspective: 500px;
+  transform-style: preserve-3d;
+}
+
+.card-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  transform: 
+    rotateY(calc(var(--offset) * 50deg)) 
+    scaleY(calc(1 + var(--abs-offset) * -0.4))
+    translateZ(calc(var(--abs-offset) * -30rem))
+    translateX(calc(var(--direction) * -5rem));
+  filter: blur(calc(var(--abs-offset) * 1rem));
+  transition: all 0.3s ease-out;
+}
+
+.card {
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  background-color: hsl(280deg, 40%, calc(100% - var(--abs-offset) * 50%));
+  border-radius: 1rem;
+  color: $color-gray;
+  text-align: justify;
+  transition: all 0.3s ease-out;
+  
+  h2 {
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
+    margin: 0 0 0.7em;
+    color: $color-black;
+  }
+  
+  p, h2 {
+    transition: all 0.3s ease-out;
+    opacity: var(--active);
+  }
+}
+
+.nav {
+  color: white;
+  font-size: 5rem;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  z-index: 2;
+  cursor: pointer;
+  user-select: none;
+  background: unset;
+  border: unset;
+  
+  &.left {
+    transform: translateX(-100%) translatey(-50%);
+  }
+  
+  &.right {
+    right: 0;
+    transform: translateX(100%) translatey(-50%);
+  }
 }
